Layout bug fixes and responsive image full support

--- a/src/main/resources/styling/styles.css
+++ b/src/main/resources/styling/styles.css
@@ -94,9 +94,10 @@
      -fx-text-fill: #FFFFFF;
      -fx-font-family: "Poppins Bold";
 }
-.image {
-    -fx-background-image: url('https://www.melhoresdestinos.com.br/wp-content/uploads/2019/02/passagens-aereas-paris-capa2019-02.jpg');
-    -fx-background-size: cover;
-    -fx-background-repeat: no-repeat;
-    -fx-background-position: center;
+
+#cityName{
+    -fx-font-size: 11px;
+         -fx-text-fill: #CDCDCD;
+         -fx-font-family: "Overpass Bold";
 }
+
